--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -29,13 +29,13 @@
 
         <span class="larger">
 
-          <form action="/posts">
+          <form class="button" action="/posts">
             <input class="logout" type="submit" value="Home">
           </form>
 
-          <p class="p">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+         &nbsp;&nbsp;|&nbsp;&nbsp;
 
-          <form action="/sessions?_method=DELETE" method="POST">
+          <form class="button" action="/sessions?_method=DELETE" method="POST">
             <input class="logout" type="submit" value="Log Out">
           </form>
 
@@ -57,5 +57,6 @@
         <input class="post"type="submit" value="Post">
       </div>
     </form>
+    <footer>Acebook™ in partnership with Eta™</footer>
   </body>
 </html>
