--- a/public/stylesheets/post-new.css
+++ b/public/stylesheets/post-new.css
@@ -1,106 +1,105 @@
-*{
-    padding: 0;
-    margin: 0;
-    font-family: "Optima", sans-serif;
+* {
+  padding: 0;
+  margin: 0;
+  font-family: "Optima", sans-serif;
 }
 body {
-    font: "Optima", sans-serif;
-    background-color: #edf2f4;
-    color: #2B2D42;
-    height: 130px;
-
-  }
-  
-  a {
-    color: #00B7FF;
-    text-decoration: none;
-  }
-
-  header{
-    display: flex;
-    width: 94%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 3%;
-    padding-right: 3%;
-    margin-bottom: 50px;
-    background-color: #2B2D42;
-    color:#edf2f4;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  footer{
-    position: fixed;
-    bottom: 0%;
-    width: 100%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-right: 2%;
-    background-color: #2B2D42;
-    color:#edf2f4;
-    text-align: center;
-  }
-
-  span{
-    align-self: center;
-    display: flex;
-  }
-
-  span.site_logo{
-    padding: 0%;
-    color: #edf2f4;
-  }
-
-  div.new-post{
-    font-weight: bolder;
-    border-radius: 5px;
-    padding: 3%;
-    background-color: #8D99AE;
-    width: 400px;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    display: flex;
-    flex-direction: column;
-    transform: translate(-50%, -50%);
-    text-align: center;
-  }
-
-  h1{
-    font-size: 20px;
-  }
-
-  .p{
-    font-size: 20px;
-    margin-top: 10%;
-    font-style: italic;
-  }
-
-  input{
-    margin-bottom: 5%;
-  }
-
-  input.logout {
-    border: none;
-    outline: none;
-    background: none;
-    cursor: pointer;
-    color: #00B7FF !important;
-    padding: 0;
-    font-family: inherit;
-    font-size: inherit;
+  font: "Optima", sans-serif;
+  background-color: #edf2f4;
+  color: #2b2d42;
+  height: 130px;
 }
 
-input.post{
+a {
+  color: #00b7ff;
+  text-decoration: none;
+}
+
+header {
+  display: flex;
+  width: 94%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 3%;
+  padding-right: 3%;
+  margin-bottom: 50px;
+  background-color: #2b2d42;
+  color: #edf2f4;
+  justify-content: space-between;
+  align-items: center;
+}
+
+footer {
+  position: fixed;
+  bottom: 0%;
+  width: 100%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 2%;
+  background-color: #2b2d42;
+  color: #edf2f4;
+  text-align: center;
+}
+
+span {
+  align-self: center;
+  display: flex;
+}
+
+span.site_logo {
+  padding: 0%;
+  color: #edf2f4;
+}
+
+div.new-post {
+  font-weight: bolder;
+  border-radius: 5px;
+  padding: 3%;
+  background-color: #8d99ae;
+  width: 400px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  flex-direction: column;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+h1 {
+  font-size: 20px;
+}
+
+.p {
+  font-size: 20px;
+  margin-top: 10%;
+  font-style: italic;
+}
+
+input {
+  margin-bottom: 5%;
+}
+
+input.logout {
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  color: #00b7ff !important;
+  padding: 0;
+  font-family: inherit;
+  font-size: inherit;
+}
+
+input.post {
   align-self: center;
   width: 50%;
   font-weight: bolder;
   font-size: 20px;
 }
 
-input.post:hover{
-  background-color: #2B2D42;
+input.post:hover {
+  background-color: #2b2d42;
   color: #edf2f4;
   font-size: 20px;
 }
@@ -119,12 +118,12 @@ input[type="file"] {
   border-radius: 10px;
 }
 
-.custom-file-upload:hover{
-  background-color: #2B2D42;
+.custom-file-upload:hover {
+  background-color: #2b2d42;
   color: #edf2f4;
 }
 
-input[type=text] {
+input[type="text"] {
   border-radius: 10px;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -133,10 +132,10 @@ input[type=text] {
   background: #edf2f4;
 }
 
-input[type=submit] {
+input[type="submit"] {
   border-radius: 10px;
-  background-color: #2B2D42;
-  color: #EDF2F4;
+  background-color: #2b2d42;
+  color: #edf2f4;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
@@ -161,9 +160,13 @@ textarea {
 }
 
 .characters-remaining-field {
+  font-weight: bold;
   text-align: left;
   padding-bottom: 20px;
-  color: rgb(98, 98, 98);
-  font-weight: 200;
+  color: #2b2d42;
   font-size: small;
+}
+
+form.button {
+  padding: 0;
 }
