--- a/public/stylesheets/signup.css
+++ b/public/stylesheets/signup.css
@@ -5,15 +5,16 @@
 }
 
 form {
-  width: 40%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: left;
   align-items: center;
+  width: 50%;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   background-color: #edf2f4;
   color: #2b2d42;
 }
@@ -65,7 +66,6 @@ a {
 
 header {
   display: flex;
-  width: 100%;
   padding-top: 2%;
   padding-bottom: 2%;
   padding-left: 5%;
@@ -74,6 +74,7 @@ header {
   background-color: #2b2d42;
   color: #edf2f4;
   justify-content: space-between;
+  align-items: center;
 }
 
 footer {
@@ -90,15 +91,10 @@ footer {
 
 span {
   align-self: center;
-  justify-content: space-between;
+  display: flex;
 }
 
 span.site_logo {
   padding: 0%;
   color: #edf2f4;
-  padding-left: 15px;
-}
-
-.login-signup {
-  padding-right: 15px;
 }
