--- a/public/stylesheets/post-new.css
+++ b/public/stylesheets/post-new.css
@@ -4,10 +4,8 @@
   font-family: "Optima", sans-serif;
 }
 body {
-  font: "Optima", sans-serif;
   background-color: #edf2f4;
   color: #2b2d42;
-  height: 130px;
 }
 
 a {
@@ -17,11 +15,10 @@ a {
 
 header {
   display: flex;
-  width: 94%;
   padding-top: 2%;
   padding-bottom: 2%;
-  padding-left: 3%;
-  padding-right: 3%;
+  padding-left: 5%;
+  padding-right: 5%;
   margin-bottom: 50px;
   background-color: #2b2d42;
   color: #edf2f4;
@@ -43,6 +40,7 @@ footer {
 
 span {
   align-self: center;
+  align-items: center;
   display: flex;
 }
 
@@ -74,21 +72,6 @@ h1 {
   font-size: 20px;
   margin-top: 10%;
   font-style: italic;
-}
-
-input {
-  margin-bottom: 5%;
-}
-
-input.logout {
-  border: none;
-  outline: none;
-  background: none;
-  cursor: pointer;
-  color: #00b7ff !important;
-  padding: 0;
-  font-family: inherit;
-  font-size: inherit;
 }
 
 input.post {
@@ -133,7 +116,6 @@ input[type="text"] {
 }
 
 input[type="submit"] {
-  border-radius: 10px;
   background-color: #2b2d42;
   color: #edf2f4;
   padding: 14px 20px;
@@ -169,4 +151,17 @@ textarea {
 
 form.button {
   padding: 0;
+}
+
+input.logout {
+  font-family: "Optima", sans-serif;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: pointer;
+  color: #00b7ff !important;
+  padding: 0;
+  font-family: inherit;
+  font-size: inherit;
+  margin: 0;
 }
