--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -31,7 +31,7 @@
             </span>
           </header>
         
-        <div class="content">
+        <div class="content col-xs-10 col-s-10 col-7">
             <h1>Timeline</h1>
 
             <div class="posts">
