--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <form action='/sessions?_method=DELETE' method='POST'>
-        <input type="submit" value="Log Out">
+        <input id="log_out" type="submit" value="Log Out">
       </form>
     </header>
     
