--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,6 +2,7 @@
 <ul class="posts">
     <li>
       {{#each posts}}
+      <a href="/users/{{this.user_id}}">User Profile</a>
       <p>{{this.message}}</p>
       <p>{{this.likes}} likes</p>
       <form action="/posts/{{this._id}}/like" method="post">
