--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -7,6 +7,7 @@
 </ul>
 
 <h1> Create a post </h1>
+<p>{{error}}</p>
 <form id="new-post-form" action="/posts" method="post">
   <input id="message" type="text" name="message" value="" placeholder = 'type your message'>
   <input type="submit" value="Submit">
