max picture size

--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -8,7 +8,7 @@
   <input type="submit" value="Submit">
 </form>
 
-<img src={{user.picture}} />
+<img src={{user.picture}} width="50" height="50"/>
 
 <p>Your friend requests</p>
 <ul class="requests">
