redirects to /post when givenan empty message

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -9,6 +9,7 @@
 <h1> Create a post </h1>
 <p>{{error}}</p>
 <form id="new-post-form" action="/posts" method="post">
+{{error}}
   <input id="message" type="text" name="message" value="" placeholder = 'type your message'>
   <input type="submit" value="Submit">
 </form>
