--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,6 +3,7 @@
 <form id="new-user-form" action="/users" method="post">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
+  <p>{{error}}</p>
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
   <label for="confirm_password"> Confirm Password: </label>
