--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,3 +1,13 @@
+<ul>
+  <li><form action='/sessions?_method=DELETE' method='POST'>
+      <input type="submit" value="Log Out">
+    </form> </li>
+  <li><a href="/users/{{session_user._id}}"><img src={{session_user.picture}} width="50" height="50"/></a></li>
+  <li><a href="/users/{{session_user._id}}">User Page</a></li>
+  <li><a class="new-post-link" href="/posts/new">New post</a></li>
+  <li><a class="home" href="/posts">Home</a></li>
+</ul>
+
 <h1>Timeline</h1>
 <ul class="posts">
     <li>
@@ -14,5 +24,3 @@
       {{/each}}
     </li>
 </ul>
-
-<a class="new-post-link" href="/posts/new">New post</a>
