--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -1,3 +1,13 @@
+<ul>
+  <li><form action='/sessions?_method=DELETE' method='POST'>
+      <input type="submit" value="Log Out">
+    </form> </li>
+  <li><a href="/users/{{session_user._id}}"><img src={{session_user.picture}} width="50" height="50"/></a></li>
+  <li><a href="/users/{{session_user._id}}">User Page</a></li>
+  <li><a class="new-post-link" href="/posts/new">New post</a></li>
+  <li><a class="home" href="/posts">Home</a></li>
+</ul>
+
 <form action="/users/{{this.user._id}}/request" method="post">
     <input type="submit" value="Send friend request">
 </form>
