fixed posts count test

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -11,5 +11,5 @@
 <form id="new-post-form" action="/posts" method="post">
 {{error}}
   <input id="message" type="text" name="message" value="" placeholder = 'type your message'>
-  <input type="submit" value="Submit">
+  <input id="submit_post" type="submit" value="Submit"> 
 </form>
