--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -8,7 +8,7 @@
   <li><a class="home" href="/posts">Home</a></li>
 </ul>
 
-<form action="/users/{{this.user._id}}/request" method="post">
+<form action="/users/{{user._id}}/request" method="post">
     <input type="submit" value="Send friend request">
 </form>
 
@@ -18,7 +18,7 @@
   <input type="submit" value="Submit">
 </form>
 
-<img src={{user.picture}} width="50" height="50"/>
+<img width="50" height="50" src={{user.picture}}/>
 
 <p>Your friend requests</p>
 <ul class="requests">
