--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,7 +2,7 @@
   <li><form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form> </li>
-  <li><a href="/users/{{session_user._id}}"><img width="50" height="50" src={{session_user.picture}}/></a></li>
+  <li><a href="/users/{{session_user._id}}"><img width="50" height="50" src={{session_user.picture}}></a></li>
   <li><a href="/users/{{session_user._id}}">User Page</a></li>
   <li><a class="new-post-link" href="/posts/new">New post</a></li>
   <li><a class="home" href="/posts">Home</a></li>
@@ -12,7 +12,7 @@
 <ul class="posts">
     <li>
       {{#each collection}}
-      <img width="40" height="40" src={{this.picture}}/>
+      <img width="40" height="40" src={{this.picture}}>
       <a href="/users/{{this.post.user_id}}">{{this.username}}</a>
       <p>{{this.post.message}}</p>
       <p>{{this.post.likes}} likes</p>
