--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -2,7 +2,7 @@
   <li><form action='/sessions?_method=DELETE' method='POST'>
       <input type="submit" value="Log Out">
     </form> </li>
-  <li><a href="/users/{{session_user._id}}"><img width="50" height="50" src={{session_user.picture}}/></a></li>
+  <li><a href="/users/{{session_user._id}}"><img width="50" height="50" src={{session_user.picture}}></a></li>
   <li><a href="/users/{{session_user._id}}">User Page</a></li>
   <li><a class="new-post-link" href="/posts/new">New post</a></li>
   <li><a class="home" href="/posts">Home</a></li>
