--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -11,5 +11,7 @@
 <form id="new-post-form" action="/posts" method="post">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" maxlength="250" required>
+  <label for="picture">Image url: </label>
+  <input id="picture" type="text" name="picture">
   <input type="submit" value="Submit">
 </form>
