your -> incoming friends requests

--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -20,7 +20,7 @@
 
 <img width="200" height="200" src={{user.picture}}>
 
-<p>Your friend requests</p>
+<p>Incoming friend requests</p>
 <ul class="requests">
   {{#each user.friends}}
     <li>{{this.user_id}}</li>
