--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -8,13 +8,13 @@
   <li><a class="home" href="/posts">Home</a></li>
 </ul>
 
-{{#unless is_session_user}}
+{{#if is_session_user}}
   <li>
     <form action="/users/{{user._id}}/request" method="post">
       <input type="submit" value="Send friend request">
     </form>
   </li>
-{{/unless}}
+{{/if}}
 
 <form id="link-form" action="/users/{{user._id}}/picture" method="post">
   <label for="picture">Link: </label>
