--- a/views/users/details.hbs
+++ b/views/users/details.hbs
@@ -24,7 +24,11 @@
 
 <img width="50" height="50" src={{user.picture}}>
 
+
+{{#if is_session_user}}
 <p>Your friend requests</p>
+{{/if}}
+
 <ul class="requests">
   {{#each user.friends}}
     <li>{{this.user_id}}</li>
