--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -7,6 +7,10 @@
   <input id="password" type="password" name="password" value="">
   <label for="username">Username: </label>
   <input id="username" type="username" name="username" value="">
+  <label for="firstName">First Name: </label>
+  <input id="firstName" type="firstName" name="firstName" value="">
+  <label for="lastName">Last Name: </label>
+  <input id="lastName" type="lastName" name="lastName" value="">
   <input id="submit" type="submit" value="Submit">
   
 </form>
