Added search_friends method, new route and search_friends view. Appended to posts/index.hbs

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -13,3 +13,10 @@
   <input id="message" type="text" name="message" value="" placeholder = 'type your message'>
   <input id="submit_post" type="submit" value="Submit"> 
 </form>
+
+<h1> search users </h1>
+<form class="search" action="/users/search_friends" method="get">
+ <label for="username">Username:</label>
+ <input type="text" id="username" name="username"><br><br>
+ <input type="submit" value="Submit">
+</form>
