--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,6 @@
     <title>{{title}}</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-
   <body>
     <nav class="nav">
         <ul>
@@ -14,10 +13,10 @@
           <li><a href='/users/friends'>Friends</a></li>
           <li><a href='/users/notifications'>Notifications</a></li>
           <li><a href='/users/profile'>Profile</a></li>
-          {{!-- <li>Hello, {{user.firstName}} {{user.lastName}}</li> --}}
-          <div class="nav-right"></div>
+          <div class="nav-right">
+          Hello, {{user.firstName}} {{user.lastName}} <br>
           <li> <form action='/sessions?_method=DELETE' method='POST'>
-        <input id="log_out" type="submit" value="Log Out">
+        <input id="log_out" type="submit" value="Log Out"></div>
       </form></li>
         </ul>
       </div>
