--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,4 @@
-<p>Hello, {{user.firstName}} {{user.lastName}}</p>
+{{!-- <p>Hello, {{user.firstName}} {{user.lastName}}</p> --}}
 
 <h1>Timeline</h1>
 <ul class="posts">
