--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
           <li><a href='/users/notifications'>Notifications</a></li>
           <li><a href='/users/profile'>Profile</a></li>
           <div class="nav-right">
-          Hello, {{user.firstName}} {{user.lastName}} <br>
+          <li class="username">Hello, {{user.firstName}} {{user.lastName}} </li>
           <li> <form action='/sessions?_method=DELETE' method='POST'>
         <input id="log_out" type="submit" value="Log Out"></div>
       </form></li>
