populated blank pages

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -33,8 +33,8 @@
 <h3>Search users: </h3>
 <form class="search" action="/users/search_friends" method="get">
  <label for="username">Username:</label>
- <input type="text" id="username" name="username">
- <input type="submit" value="Submit">
+ <input type="text" id="username" name="username"><br><br>
+ <input type="submit" value="Find friends">
 </form>
 </div>
 
