CSS for login & sign up

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -33,7 +33,7 @@
 <h3>Friends: </h3>
 <form class="search" action="/users/search_friends" method="get">
  <label for="username">Username:</label>
- <input type="text" id="username" name="username"><br><br>
+ <input type="text" id="username" name="username">
  <input type="submit" value="Find friends">
 </form>
 </div>
