--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,28 @@
 <form id="new-user-form" action="/users" method="post">
+  <label for="first-name">First Name: </label>
+  <input id="first-name" type="first-name" name="first-name" value="">
+  <br>
+  <br>
+
+  <label for="last-name">Last Name: </label>
+  <input id="last-name" type="last-name" name="last-name" value="">
+  <br>
+  <br>
+
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
+  <br>
+  <br>
+
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
+  <br>
+  <br>
+
+  <label for="confirm-password">Confirm Password: </label>
+  <input id="confirm-password" type="password" name="confirm-password" value="">
+  <br>
+  <br>
+
   <input id="submit" type="submit" value="Submit">
 </form>
