--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="/stylesheets/style.css" />
   </head>
   <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
+    <form action="/sessions?_method=DELETE" method="POST">
+      <input type="submit" value="Log Out" />
+      <a href="/sessions/new">sign in</a>
+      <a href="/users/new">sign up</a>
+      <a href="/posts">posts</a>
     </form>
     {{{body}}}
   </body>
