--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,16 @@
-<h1 class="title">{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<div class="parent-container">
+    <div class="left-container">
+        <h1 class="title">{{title}}</h1>
+        <p class="slogan">Making people's lives betta</p>
+    </div>
+    <div class="right-container">
+        <div class="welcome-box">
+            <form class="login-form">
+                <input>
+                <input>
+                <button type="submit">Login</button>
+            </form>
+            <a><button>Create new Account</button></a>
+        </div>
+    </div>
+</div>
