fixed database issues

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,11 +1,11 @@
 <form id="new-user-form" action="/users" method="post">
   <label for="first-name">First Name: </label>
-  <input id="first-name" type="first-name" name="first-name" value="">
+  <input id="first-name" type="first-name" name="firstName" value="">
   <br>
   <br>
 
   <label for="last-name">Last Name: </label>
-  <input id="last-name" type="last-name" name="last-name" value="">
+  <input id="last-name" type="last-name" name="lastName" value="">
   <br>
   <br>
 
