/new changed to signup, sessions changed to login

--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -1,2 +1,5 @@
 <h1 class="title">{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+
+{{!-- potential additions to homepage : add a description, a picture  --}}
