--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,8 @@
 <form id="new-user-form" action="/users" method="post">
+  <label for="firstName">First Name: </label>
+  <input id="firstName" type="text" name="firstName" value="">
+  <label for="lastName">Last Name: </label>
+  <input id="lastName" type="text" name="lastName" value="">
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
   <label for="password">Password: </label>
