--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,15 @@
-<form id="new-user-form" action="/users" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
+<div class="banner">
+  <a><h1 class="title">Acebook</h1></a>
+  <hr>
+</div>
+
+<div class="signup-box">
+  <form id="new-user-form" action="/users" method="post">
+    <label for="email">Email: </label>
+    <input id="email" type="email" name="email" value="">
+    <label for="password">Password: </label>
+    <input id="password" type="password" name="password" value="">
+    <input id="submit" type="submit" value="Submit">
+  </form>
+</div>
+
