--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,7 +1,26 @@
-<form id="new-user-form" action="/users" method="post">
-  <label for="email">Email: </label>
-  <input id="email" type="email" name="email" value="">
-  <label for="password">Password: </label>
-  <input id="password" type="password" name="password" value="">
-  <input id="submit" type="submit" value="Submit">
-</form>
+<html>
+  <head>
+    <title>Sign Up</title>
+    {{!-- <link rel="stylesheet" href="/stylesheets/style.css" /> --}}
+
+  </head>
+  <body>
+
+  <h1 class="text-center mb-4">Sign Up</h1>
+  <form id="new-user-form" action="/users" method="post">
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control custom-input" id="email" name="email" placeholder="Enter your email" required>
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" class="form-control custom-input" id="password" name="password" placeholder="Enter your password" required>
+    </div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary btn-block" id="submit">Sign Up</button>
+    </div>
+  </form>
+
+    </div>
+  </body>
+</html>
