working on posts and comments

--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,9 +1,13 @@
+<form action='/sessions?_method=DELETE' method='POST'>
+      <input type="submit" value="Log Out">
+    </form>
 <h1>Timeline</h1>
 <ul class="posts">
   {{#each posts}}
-  <li>{{this.message}}</li> 
+  <li><a href="/posts/{{this._id}}">{{this.message}}</a></li> 
   <li>{{this.likes}} likes</li>
   {{/each}}
 </ul>
+
 
 <a class="new-post-link" href="/posts/new">New post</a>
