--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -1,5 +1,12 @@
+<form action='/sessions?_method=DELETE' method='POST'>
+      <input type="submit" value="Log Out">
+    </form>
+
 <form id="new-post-form" action="/posts" method="post">
+<form action="/action_page.php">
+  <input type="file" id="myFile" name="filename">
   <label for="message">Message: </label>
   <input id="message" type="text" name="message" value="">
-  <input type="submit" value="Submit">
+  <input type="submit">
 </form>
+
