--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -4,13 +4,11 @@
         <p class="slogan">Making people's lives betta</p>
     </div>
     <div class="right-container">
-        <div class="welcome-box">
-            <form class="login-form">
-                <input>
-                <input>
-                <button type="submit">Login</button>
-            </form>
-            <a><button>Create new Account</button></a>
-        </div>
+        <a href="/sessions/new" class="homepage-button">Sign In</a>
+
+        <hr>
+
+        <a href="/users/new" class="homepage-button">Sign Up</a>
+        
     </div>
 </div>
