--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,4 @@
- /* body {
+/* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 } */
@@ -12,28 +12,39 @@
 .form-group {
   display: flex;
   align-items: center;} */
-/* 
+/*
   .custom-input {
     height: 45px;
   } */
-  
-  /* .container {
+
+/* .container {
     max-width: 500px;
   } */
-  
-  #submit {
-    background-color: #5c6bc0;
-    border-color: #5c6bc0;
-  }
-  
-  #submit:hover {
-    background-color: #3949ab;
-    border-color: #3949ab;
-  }  
+
+#submit {
+  background-color: #5c6bc0;
+  border-color: #5c6bc0;
+}
+
+#submit:hover {
+  background-color: #3949ab;
+  border-color: #3949ab;
+}
 
 form {
   padding: 50px;
   margin-left: 420px;
-  margin-right:420px;
+  margin-right: 420px;
 }
 
+.liked-by-tooltip {
+  display: none;
+  position: absolute;
+  background-color: white;
+  border: 1px solid black;
+  padding: 10px;
+}
+
+.post-likes:hover .liked-by-tooltip {
+  display: block;
+}
