--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -2,11 +2,18 @@
 <ul class="posts">
   {{#each posts}}
     <li class="post-message">{{this.message}}</li>
-    <li class="post-likes">{{this.likesCount}} likes</li>
+    <li class="post-likes">
+      {{this.likesCount}}
+      likes
+      <div class="liked-by-tooltip">
+        {{#each this.likedBy}}
+          <div>{{this}}</div>
+        {{/each}}
+      </div>
+    </li>
     <form action="/likes" method="post">
       <input type="hidden" name="postId" value={{this._id}} />
       <button type="submit" class="like-button">❤️</button>
-      <p>{{this.likedBy}}</p>
     </form>
   {{/each}}
 </ul>
