--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -1,3 +1,6 @@
+<form action='/sessions?_method=DELETE' method='POST'>
+      <input type="submit" value="Log Out">
+
 
 {{!-- <p>{{post.message}}</p> --}}
 <h1>This is a post</h1>
