--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,9 +5,20 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <form action='/sessions?_method=DELETE' method='POST'>
-      <input type="submit" value="Log Out">
-    </form>
+
+{{!-- Authentication for user's login status which is linked to the controller sessions.js file under the Create method --}}
+<nav>
+<ul>
+    {{#if isAuthenticated}}
+        <li><a href="/posts">Posts</a></li>
+        <li><a href="/profile">Profile</a></li> 
+        <li><a href="/sessions/login">Logout</a></li> 
+    {{else}}
+        <li><a href="/sessions/login">Login</a></li>
+        <li><a href="/users/signup">Sign-up</a></li>
+    {{/if}}
+</ul>
+</nav>
     {{{body}}}
   </body>
 </html>
