--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -13,9 +13,9 @@
   <div class="signup-box">
     <form id="new-user-form" action="/users" method="post">
       <label for="first-name">First Name: </label><br>
-      <input id="first-name" type="first-name" name="firstName" value=""><br>
+      <input id="first-name" type="first-name" name="firstName" maxlength="20" value=""><br>
       <label for="last-name">Last Name: </label><br>
-      <input id="last-name" type="last-name" name="lastName" value=""><br>
+      <input id="last-name" type="last-name" name="lastName" maxlength="20" value=""><br>
       <label for="email">Email: </label><br>
       <input id="email" type="email" name="email" value=""><br>
       {{!-- {{#if error.email}}
