--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -5,9 +5,16 @@
 
   </head>
   <body>
+{{#if error}}
+  <div class="error">{{error}}</div>
+{{/if}}
 
   <h1 class="text-center mb-4">Sign Up</h1>
   <form id="new-user-form" action="/users" method="post">
+   <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="username" class="form-control custom-input" id="username" name="username" placeholder="Enter your username" required>
+    </div>
     <div class="form-group">
       <label for="email">Email:</label>
       <input type="email" class="form-control custom-input" id="email" name="email" placeholder="Enter your email" required>
