Add login and signup links

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,11 +1,17 @@
 <form id="new-user-form" action="/users" method="post">
   <label for="firstName">First Name: </label>
   <input id="firstName" type="text" name="firstName" value="">
+  <br><br>
   <label for="lastName">Last Name: </label>
   <input id="lastName" type="text" name="lastName" value="">
+  <br><br>
   <label for="email">Email: </label>
   <input id="email" type="email" name="email" value="">
+  <br><br>
   <label for="password">Password: </label>
   <input id="password" type="password" name="password" value="">
+  <br><br>
   <input id="submit" type="submit" value="Submit">
+  <br><br>
+  <a href="../sessions/new">Already have an account? Log in.</a>
 </form>
