--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,4 +1,7 @@
 <h1>Timeline</h1>
+<form action='/sessions?_method=DELETE' method='POST'>
+  <input type="submit" value="Log Out">
+</form>
 <ul class="posts">
   {{#each posts}}
   <li>{{this.message}}</li> 
