--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -8,6 +8,10 @@
   <li>{{this.likes}} likes</li>
   {{/each}}
 </ul>
-
+{{!-- <ul class="comments">
+  {{#each post.comments}}
+  <li>{{ this.content }} - {{ this.author }}</li>
+  {{/each}}
+</ul> --}}
 
 <a class="new-post-link" href="/posts/new">New post</a>
