--- a/views/profile/index.hbs
+++ b/views/profile/index.hbs
@@ -1,5 +1,6 @@
+
 <h1>Name</h1>
-<a href="../posts/index.hbs">Timeline</a>
+<a href="../posts">Timeline</a>
 <form action="/sessions?_method=DELETE" method="POST">
   <input type="submit" value="Log Out" />
 </form>
@@ -7,23 +8,26 @@
 <div>
   <p>Friends</p>
   <ul class="users">
+    {{#each friends_names}}
+      <form action="/" method="POST"></form>
+      <li>{{this.firstName}} {{this.lastName}}<input type="submit" value="Remove Friend" />
+      </form>
+      {{!-- <li>{{this}}</li> --}}
+    {{/each}}
+  </ul>
 
-</ul>
-
-  <form action="/" method="POST">
-    <input type="submit" value="Remove Friend" />
-  </form>
 
 </div>
 
 <div>
   <p>Users</p>
-    <ul class="users">
-  {{#each users}}
-  <li>{{this.email}}</li> 
-  {{/each}}
-</ul>
-  <form action="/" method="POST">
-    <input type="submit" value="Add Friend" />
-  </form>
+  <ul class="users">
+    {{#each nonFriends}}
+      {{!-- <li>{{this.email}}</li> --}}
+      <form action="/" method="POST"></form>
+      <li>{{this.firstName}} {{this.lastName}}<input type="submit" value="Add Friend" />
+      </form>
+    {{/each}}
+  </ul>
+
 </div>
