--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -13,19 +13,13 @@
   <div class="signup-box">
     <form id="new-user-form" action="/users" method="post">
       <label for="first-name">First Name: </label><br>
-      <input id="first-name" type="first-name" name="firstName" maxlength="20" value=""><br>
+      <input id="first-name" type="first-name" name="firstName" maxlength="20" value="" required><br>
       <label for="last-name">Last Name: </label><br>
-      <input id="last-name" type="last-name" name="lastName" maxlength="20" value=""><br>
+      <input id="last-name" type="last-name" name="lastName" maxlength="20" value="" required><br>
       <label for="email">Email: </label><br>
-      <input id="email" type="email" name="email" value=""><br>
-      {{!-- {{#if error.email}}
-        <div class="error-message">{{error.email}}</div>
-      {{/if}} --}}
+      <input id="email" type="email" name="email" value="" required><br>
       <label for="password">Password: </label><br>
       <input id="password" type="password" name="password" value="" required><br>
-      {{!-- {{#if error.password}}
-        <div class="error-message">{{error.password}}</div>
-      {{/if}} --}}
       <label for="confirm-password">Confirm Password: </label><br>
       <input id="confirm-password" type="password" name="confirm-password" value="" required><br>
       <input id="submit" type="submit" value="Submit">
