--- a/views/home/index.hbs
+++ b/views/home/index.hbs
@@ -4,11 +4,11 @@
         <p class="slogan">Making people's lives betta</p>
     </div>
     <div class="right-container">
-        <a href="/sessions/new" class="homepage-button">Sign In</a>
+        <a href="/sessions/new" class="global-button">Sign In</a>
 
         <hr>
 
-        <a href="/users/new" class="homepage-button">Sign Up</a>
+        <a href="/users/new" class="global-button">Sign Up</a>
         
     </div>
 </div>
