--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -55,7 +55,7 @@ a:hover {
   text-align: center;
 }
 
-.homepage-button {
+.global-button {
   width: 20vh;
   background-color: var(--main-color);
   margin: 1.25vh;
@@ -63,9 +63,10 @@ a:hover {
   border-radius: 5px;
   text-decoration: none;
   color: white;
+  border: none;
 }
 
-.homepage-button:hover {
+.global-button:hover {
   color: var(--main-color);
   background-color:rgb(255, 186, 180);
 }
@@ -94,7 +95,7 @@ a:hover {
   margin-top: 2vh;
 }
 
-/* signup page */
+/* Views --> Sessions --> new.hbs */
 #parent {
   display: flex;
   justify-content: center;
@@ -114,4 +115,89 @@ a:hover {
 
 .signup-box p {
   text-align: center;
+}
+
+/* Views --> Posts --> Navbar timeline */
+/* Fixes the navbar when a user scrolls down */
+.timeline-navbar {
+  background-color: white;
+  width: 100%;
+  height: auto;
+  margin: auto;
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: var(--main-color);
+  text-align: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.topbar, .bottombar {
+  display: flex;
+  align-items: center;
+  width: 88%;
+}
+
+.topbar {
+  justify-content: space-between;
+  padding-top: 5vh;
+}
+
+.bottombar {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 5vh 0vh;
+}
+
+.initials {
+  display: flex;
+  padding: 2vh;
+  border-radius: 100%;
+  border-style: solid;
+  height: 9vh;
+  width: 9vh;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.logout {
+  width: auto;
+  margin: 0;
+}
+
+.comment-box {
+  margin-top: 10vh;
+}
+
+/* Creating a new post  */
+.new-post-parent {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 10vh;
+}
+
+.new-postbox {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  border-style: solid; 
+  border-width: 1px;
+  border-radius: 5px;
+  justify-content: center;
+  align-items: center;
+  width: 45vh;
+  padding: 4vh;
+}
+
+.new-post-content {
+  margin-bottom: 2vh;
+}
+
+.new-post-controls {
+
 }
