--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -28,7 +28,7 @@
       {{/if}} --}}
       <label for="confirm-password">Confirm Password: </label><br>
       <input id="confirm-password" type="password" name="confirm-password" value="" required><br>
-      <input id="submit" type="submit" value="Submit">
+      <input id="submit" type="submit" value="Submit" class="global-button">
     </form>
     <p>Did you mean <a href="/sessions/new">login</a>?</p>
   </div>
