--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
+@import url("./posts/index.css");
+@import url("./components/index.css");
+
 /* body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -35,16 +38,4 @@ form {
   padding: 50px;
   margin-left: 420px;
   margin-right: 420px;
-}
-
-.liked-by-tooltip {
-  display: none;
-  position: absolute;
-  background-color: white;
-  border: 1px solid black;
-  padding: 10px;
-}
-
-.post-likes:hover .liked-by-tooltip {
-  display: block;
 }
