added input sanitization and tests

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -21,7 +21,7 @@
       <label for="password">Password: </label><br>
       <input id="password" type="password" name="password" value="" required><br>
       <label for="confirm-password">Confirm Password: </label><br>
-      <input id="confirm-password" type="password" name="confirm-password" value="" required><br>
+      <input id="confirm-password" type="password" name="confirmPassword" value="" required><br>
       <input id="submit" type="submit" value="Submit">
     </form>
     <p>Did you mean <a href="/sessions/new">login</a>?</p>
