add link to friends; show sent friend requests

--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -1,3 +1,10 @@
+<p>friendship requests</p>
+<ul class="friendship-requests">
+  {{#each friendshipsRequests}}
+    <p>{{this.recipient.username}}</p>
+  {{/each}}
+</ul>
+
 <p>pending friendships</p>
 <ul class="pending-friendships">
   {{#each pendingFriendships}}
