--- a/views/friends/index.hbs
+++ b/views/friends/index.hbs
@@ -1,31 +1,48 @@
-<p>friendship requests</p>
-<ul class="friendship-requests">
-  {{#each friendshipsRequests}}
-    <p>{{this.recipient.username}}</p>
-  {{/each}}
-</ul>
+<div class="friends-container">
+  <section class="friendship-section">
+    <h2>Friendship Requests</h2>
+    <ul class="friendship-requests">
+      {{#each friendshipsRequests}}
+        <li>{{this.recipient.username}}</li>
+      {{/each}}
+    </ul>
+  </section>
 
-<p>pending friendships</p>
-<ul class="pending-friendships">
-  {{#each pendingFriendships}}
-    <div>{{this.requester.username}}</div>
+  <section class="pending-section">
+    <h2>Pending Friendships</h2>
+    <ul class="pending-friendships">
+      {{#each pendingFriendships}}
+        <li>
+          <p class="username">{{this.requester.username}}</p>
+          <div class="actions">
+            <form action="friends/accept" method="post">
+              <input
+                type="hidden"
+                name="requesterId"
+                value={{this.requester._id}}
+              />
+              <button type="submit" class="accept-button">Accept</button>
+            </form>
+            <form action="friends/reject" method="post">
+              <input
+                type="hidden"
+                name="requesterId"
+                value={{this.requester._id}}
+              />
+              <button type="submit" class="reject-button">Reject</button>
+            </form>
+          </div>
+        </li>
+      {{/each}}
+    </ul>
+  </section>
 
-    <form action="friends/accept" method="post">
-      <input type="hidden" name="requesterId" value={{this.requester._id}} />
-      <button type="submit" class="like-button">Accept</button>
-    </form>
-
-    <form action="friends/reject" method="post">
-      <input type="hidden" name="requesterId" value={{this.requester._id}} />
-      <button type="submit" class="like-button">Reject</button>
-    </form>
-
-  {{/each}}
-</ul>
-
-<p>you are friends with</p>
-<ul class="accepted-friendships">
-  {{#each acceptedFriendships}}
-    <div>{{this.requester.username}}</div>
-  {{/each}}
-</ul>
+  <section class="accepted-section">
+    <h2>You are friends with</h2>
+    <ul class="accepted-friendships">
+      {{#each acceptedFriendships}}
+        <li>{{this.requester.username}}</li>
+      {{/each}}
+    </ul>
+  </section>
+</div>
