--- a/views/posts/index.hbs
+++ b/views/posts/index.hbs
@@ -1,29 +1,31 @@
-<h1>Timeline</h1>
-<ul class="posts">
-  {{#each posts}}
+<section class="timeline-section">
+  <ul class="posts">
+    {{#each posts}}
+      <li class="post-item">
+        <div class="post-message">{{this.message}}</div>
+        <p class="post-author">Written by {{this.username}}</p>
+        <div class="actions">
+          <form action="/friends" method="post">
+            <input type="hidden" name="recipientId" value={{this.user}} />
+            <button type="submit" class="befriend-button">Poke</button>
+          </form>
+          <form action="/likes" method="post">
+            <input type="hidden" name="postId" value={{this._id}} />
+            <button type="submit" class="like-button">❤️</button>
+          </form>
+        </div>
+        <div class="post-likes">
+          {{this.likesCount}}
+          likes
+          <div class="liked-by-tooltip">
+            {{#each this.likedBy}}
+              <div>{{this}}</div>
+            {{/each}}
+          </div>
+        </div>
+      </li>
+    {{/each}}
+  </ul>
 
-    <li class="post-message">{{this.message}}</li>
-    <p>written by {{this.user}}</p>
-    <span>
-      <form action="/friends" method="post">
-        <input type="hidden" name="recipientId" value={{this.user}} />
-        <button type="submit" class="befriend-button">poke</button>
-      </form>
-    </span>
-    <li class="post-likes">
-      {{this.likesCount}}
-      likes
-      <div class="liked-by-tooltip">
-        {{#each this.likedBy}}
-          <div>{{this}}</div>
-        {{/each}}
-      </div>
-    </li>
-    <form action="/likes" method="post">
-      <input type="hidden" name="postId" value={{this._id}} />
-      <button type="submit" class="like-button">❤️</button>
-    </form>
-  {{/each}}
-</ul>
-
-<a class="new-post-link" href="/posts/new">New post</a>
+  <a class="new-post-link" href="/posts/new">New Post</a>
+</section>
